<resources>
    <string name="app_name">Pokémon</string>
    <string name="title_activity_main">Carte</string>
    <string name="title_activity_pokedex">Pokedex</string>
    <string name="title_sac_activity">Sac à Dos</string>
    <string name="action_settings">Menu</string>
    <string name="title_activity_combat">Combat</string>
    <string name="title_activity_my_team">Mon Équipe</string>
    <string name="title_main_acitivty">Pokémon</string>

    <!-- Strings related to details pokedex -->
    <string name="attaque_pokemon_detail">Attaque</string>
    <string name="defense_pokemon_detail">Défense</string>
    <string name="niveau_pokemon_detail">Niveau</string>
    <string name="pv_pokemon_detail">PV</string>

    <!-- Strings related to fight -->
    <string name="button_atk">Attaque</string>
    <string name="button_def">Défense</string>
    <string name="button_pkball">Pokéball</string>
    <string name="button_sac">Sac</string>
    <string name="button_fuite">Fuite</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de Passe</string>
    <string name="action_sign_in">Se Connecter</string>
    <string name="action_sign_in_short">Se Connecter</string>
    <string name="error_invalid_email">Email Invalide</string>
    <string name="error_invalid_password">Mot de Passe trop court</string>
    <string name="error_incorrect_password">Mot de Passe incorrect</string>
    <string name="error_field_required">Champs requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pokedex_detail">Détails du Pokémon</string>

    <string name="title_activity_home">Pokémon</string>
    <string name="menu_seDeconnecter">Se deconnecter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Carte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="label_def">def</string>
    <string name="label_atk">atk</string>
    <string name="label_niv">niv</string>
    <string name="label_exp">exp</string>

    <string name="button_suppEquipe">Enlever de l\'équipe</string>
    <string name="title_activity_detail_pokemon_mon_equipe">DetailPokemonMonEquipeActivity</string>

</resources>
