<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_carte"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_monEquipe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_activity_my_team" />
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_activity_pokedex" />
        <item
            android:id="@+id/nav_sacADos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_sac_activity" />
    </group>

</menu>
