<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.pokemonteam.pokemon.controller.DetailPokemonMonEquipeActivity"
    tools:showIn="@layout/activity_detail_pokemon_mon_equipe">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numero_pokemon_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <TextView
        android:layout_below="@+id/numero_pokemon_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nom_pokemon_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/image_pokemon_detail"
        android:layout_below="@+id/nom_pokemon_detail"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:layout_below="@+id/image_pokemon_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_pokemon_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_below="@+id/type_pokemon_detail"
        android:id="@+id/carac_pokemon_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/attaque_pokemon_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/attaque_pokemon_detail"
                android:layout_gravity="center" />

            <TextView
                android:layout_below="@+id/attaque_pokemon_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/attaque_valeur_pokemon_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defense_pokemon_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/defense_pokemon_detail"
                android:layout_gravity="center" />

            <TextView
                android:layout_below="@+id/defense_pokemon_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/defense_valeur_pokemon_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/niveau_pokemon_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/niveau_pokemon_detail"
                android:layout_gravity="center" />

            <TextView
                android:layout_below="@+id/niveau_pokemon_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/niveau_valeur_pokemon_detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_below="@+id/carac_pokemon_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pv_pokemon_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/pv_pokemon_detail"
        android:layout_gravity="center" />

    <TextView
        android:layout_below="@+id/pv_pokemon_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pv_valeur_pokemon_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <ProgressBar
        android:id="@+id/monEquipe_progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_below="@+id/pv_valeur_pokemon_detail"
        android:layout_marginTop="10dp"
        android:progressBackgroundTint="@color/material_deep_teal_200"
        android:progressTint="@color/accent_material_light" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_suppEquipe"
        android:layout_alignParentBottom="true"
        android:onClick="suppPokemon"/>


</RelativeLayout>
